--- a/translations/base-ru.yaml
+++ b/translations/base-ru.yaml
@@ -6,12 +6,12 @@ steamPage:
         Любите игры про автоматизацию? Тогда вы по адресу!
 
         shapez.io это спокойная игра, в которой вам предстоит строить фабрики по автоматизированному производству геометрических фигур.
-        По мере управления уровня, фигуры становятся все сложнее, так что придется расширять фабрику засчет бесконечной карты.
+        По мере роста уровня, фигуры становятся все сложнее, так что придется расширять фабрику засчет бесконечной карты.
 
         Если этого мало, то Вам так же придется  экспоненциально увеличивать производство, чтобы удовлетворить потребности Вашей фабрики. Ключ к успеху - масштабирование!
-        И если в начале вам понадобится обрабатывать только формы, то позже вы начнёте их раскрашивать, добывая и комбенируя красители.
+        И если в начале вам понадобится обрабатывать только формы, то позже вы начнёте их раскрашивать, добывая и комбинируя красители.
 
-        Вначале игры Вам понадобится производить только фигуры, однако позже фигуры надо будет окрашивать. Для этого добывайте и смешивайте краски!
+        В начале игры Вам понадобится производить только фигуры, однако позже фигуры надо будет окрашивать. Для этого добывайте и смешивайте краски!
 
         Приобретение игры в Steam предоставляет доступ к полной версии игры, но вы можете опробовать демоверсию игры на shapez.io и принять решение позже!
     title_advantages: Преимущества полной версии
@@ -439,7 +439,7 @@ buildings:
     mixer:
         default:
             name: Смешиватель
-            description: Аддитивно смешивает цвета двух красителей.
+            description: Аддиктивно смешивает цвета двух красителей.
     painter:
         default:
             name: Покрасчик
@@ -684,7 +684,7 @@ storyRewards:
         title: Балансер
         desc:
             Многофункциональный <strong>балансер</strong> разблокирован - Он используется для <strong>разделения и обьединения
-            потора предметов</strong> на несколько конвейеров!
+            потока предметов</strong> на несколько конвейеров!
     reward_merger:
         title: Компактный Соединитель
         desc: Разблокирован <strong>соединитель</strong> - вариант
@@ -726,7 +726,7 @@ storyRewards:
             можете симулировать резак, вращатель, объединитель и др. на слое с
             проводами! Теперь у вас есть три варианта продолжения игры:<br><br>
             - Построить <strong>автоматический механизм</strong> для
-            производства любой фигуры, запрашиваемой ХАБ (рекомендую
+            производства любой фигуры, запрашиваемой ХАБом (рекомендую
             попробовать!).<br><br> - Построить что-то клевое, используя
             провода.<br><br> - Продолжить обычную игру. <br><br> Что бы вы не
             выбрали, не забывайте хорошо проводить время!
@@ -734,7 +734,7 @@ storyRewards:
         title: Провода & Покрасчик (4 входа)
         desc: "Вы разблокировали <strong>Слой проводов</strong>: Это отдельный
             слой выше обычного слоя и он предоставляет много новых
-            механик!<br><br> Для начала я разблокировал тебе <strong>Покрасчик на 4 входа
+            механик!<br><br> Для начала я разблокировал Вам <strong>Покрасчик на 4 входа
             </strong> - Соедини слоты которые нужно покрасить на слое проводов!<br><br> Для переключения видимости слоя проводов, нажми
             <strong>E</strong>. <br><br> PS: <strong>Включи подсказки</strong> в
             настройках что бы активировать обучение по проводам!"
